--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -4,6 +4,11 @@ known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 	Lors de l'édition d'une sous opération, la sélection d'un libellé prédéfini remet le montant de la sous-opération à 0.
 
+version 0.15.5 (???)
+improvement
+	Plusieurs optimisations en terme de vitesse et de cosommation mémoire.
+	Une meilleure gestion des fichiers non supporés (En particulier, les fichiers encodés avec de futures versions de l'algo seront reconnus comme non supportés et non corrompus).
+
 version	0.15.4 (09/06/2013)
 fix
 	Bug introduit en 0.15.3: Le dialogue "Filtre personnalisé" ne s'affichait pas correctement sur les petits écrans.
