--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -4,9 +4,10 @@ known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 	When editing a subtransaction, selecting a predefined label sets the amount to 0.
 
-version 0.15.5 (???)
+version 0.15.5 (12/31/9999)
 fix
 	Menu shortcuts used the CTRL key on Macintosh (instead of "Apple" key).
+	A bug in the encryption of password protected files made ​​it impossible to decrypt on Android (Android application is under development).
 improvement
 	Several speed improvements.
 	Better handling of unsupported file format (especially, future versions of encoded files will be detected as non supported instead of corrupted).
