--- a/src/net/yapbam/gui/tools/messages.properties
+++ b/src/net/yapbam/gui/tools/messages.properties
@@ -11,7 +11,7 @@ CurrencyConverterPanel.origin.toolTip=Select the source currency here
 CurrencyConverterPanel.result.toolTip=Displays the converted amounts
 CurrencyConverterPanel.topMessage=The conversion rates are according to the rates of European Central Bank on\: {0,date,long}
 ToolsPlugIn.calculator.title=Calculator
-ToolsPlugIn.calculator.toolTip=Abre uma calculadora
+ToolsPlugIn.calculator.toolTip=Opens a calculator
 ToolsPlugIn.currencyConverter.title=Currency converter
 ToolsPlugIn.currencyConverter.toolTip=Opens the currency converter
 ToolsPlugIn.menu.title=Tools
