--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1216,3 +1216,8 @@ MainMenu.Open.Error.DialogContent.needUpdate=<html>Désolé impossible de lire le 
 CheckModePanel.target=Solde cible :
 CheckModePanel.target.tooltip=<html>Entrez le solde de fin présent sur votre relevé de compte.<br>Le champ ci-dessous indiquera alors l'écart entre le solde de fin actuel et cette cible.</html>
 CheckModePanel.gap=(Ecart : {0})
+
+#New setting of the transaction table
+MainFrame.Transactions.Preferences.separateExpenseReceipt=Afficher les recettes et les dépenses dans des colonnes séparées
+MainFrame.Transactions.Preferences.separateExpenseReceipt.tooltip=Cochez cette case pour afficher les recettes et les dépenses dans des colonnes séparées
+
