--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1217,7 +1217,31 @@ CheckModePanel.target=Solde cible :
 CheckModePanel.target.tooltip=<html>Entrez le solde de fin présent sur votre relevé de compte.<br>Le champ ci-dessous indiquera alors l'écart entre le solde de fin actuel et cette cible.</html>
 CheckModePanel.gap=(Ecart : {0})
 
+#New generic wordings
+GenericButton.select=Sélectionner
+Generic.selectAll=Tout sélectionner
+Generic.unselectAll=Tout déselectionner
+
+#A new tool to archive old transactions in a separate file
+Archive.menu.name=Archiver
+Archive.menu.tooltip=Déplace les anciennes opérations vers un fichier d'archivage
+Archive.selectionDialog.title=Choisissez le fichier d'archivage ou créez en un nouveau
+Archive.statementSelection.helpMessage=<html>Merci de sélectionner les relevés à archiver.<br><br>Cliquez sur une cellule de la colonne \"{0} \" pour afficher la liste des relevés.<br>Le relevé sélectionné ainsi que tous les précédents seront archivés.</html>
+Archive.statementSelection.ignored.title=Ignoré
+Archive.statementSelection.nothingSelected=Il n'y a pas de relevé dans ce compte
+Archive.statementSelection.noTransactionSelected=Aucune opération n'est sélectionnée
+Archive.statementSelection.until.title=Jusqu'au relevé
+Archive.accountBalancesNotMatch=Le solde initial du compte <b>"{0}"</b> ({1}) est différent du solde final de ce compte dans l'archive ({2}).
+Archive.accountBalancesNotMatchFinalMessage=Voulez-vous tout de même continuer ?
+Archive.report={0} opérations ont étées archivées.
+
 #New setting of the transaction table
 MainFrame.Transactions.Preferences.separateExpenseReceipt=Afficher les recettes et les dépenses dans des colonnes séparées
 MainFrame.Transactions.Preferences.separateExpenseReceipt.tooltip=Cochez cette case pour afficher les recettes et les dépenses dans des colonnes séparées
 
+#New settings of the transaction table in the balance history pane
+BalanceHistory.prefs.highlightAlerts=Surligner les alertes
+BalanceHistory.prefs.highlightAlerts.tooltip=Cochez cette case pour surligner les lignes qui déclenchent des alertes sur le solde
+BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>Même fond que l'onglet "<b>{0}</b>"</html>
+BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Cochez cette case pour pour utiliser les mêmes couleurs de fond que dans l'onglet "<b>{0}</b>"</html>
+BalanceHistory.prefs.title=Cet onglet permet de configurer l'affichage de la table de l'historique du solde
