--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -1231,7 +1231,7 @@ Archive.statementSelection.ignored.title=Ignoré
 Archive.statementSelection.nothingSelected=Il n'y a pas de relevé dans ce compte
 Archive.statementSelection.noTransactionSelected=Aucune opération n'est sélectionnée
 Archive.statementSelection.until.title=Jusqu'au relevé
-Archive.accountBalancesNotMatch=Le solde initial du compte <b>"{0}"</b> ({1}) est différent du solde final de ce compte dans l'archive ({2}).
+Archive.accountBalancesNotMatch=Le solde initial du compte <b>"{0}"</b> ({1}) est différent du solde final de ce compte dans l''archive ({2}).
 Archive.accountBalancesNotMatchFinalMessage=Voulez-vous tout de même continuer ?
 Archive.report={0} opérations ont étées archivées.
 
@@ -1242,6 +1242,6 @@ MainFrame.Transactions.Preferences.separateExpenseReceipt.tooltip=Cochez cette c
 #New settings of the transaction table in the balance history pane
 BalanceHistory.prefs.highlightAlerts=Surligner les alertes
 BalanceHistory.prefs.highlightAlerts.tooltip=Cochez cette case pour surligner les lignes qui déclenchent des alertes sur le solde
-BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>Même fond que l'onglet "<b>{0}</b>"</html>
-BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Cochez cette case pour pour utiliser les mêmes couleurs de fond que dans l'onglet "<b>{0}</b>"</html>
+BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>Même fond que l''onglet "<b>{0}</b>"</html>
+BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Cochez cette case pour pour utiliser les mêmes couleurs de fond que dans l''onglet "<b>{0}</b>"</html>
 BalanceHistory.prefs.title=Cet onglet permet de configurer l'affichage de la table de l'historique du solde
