--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1221,7 +1221,7 @@ BalanceHistory.ignoreEnd.toolTip=Marque esta caixa para ignorar a data de términ
 #Improvement of the message indicating that a data file is corrupted or not a yapbam file
 MainMenu.Open.Error.DialogContent=<html>Desculpe, o arquivo <b>{0}</b> não parece ser um arquivo de dados de Yapbam.<br><br>Se você não ocasionou nenhum erro, então o arquivo pode estar corrupto.<br><br>Dessa forma, ajuda pode ser obtida através do email.<br> Envie o seu arquivo e a mensagem abaixo<b>suporte@yapbam.net</b>.<br><br>Os dados do arquivo serão usados somente para arrumar o arquivo (ou Yapbam, se o problema não for o seu arquivo).<br>Não garantimos que todos os dados do arquivo serão recuperados.</html>
 #A new dialog when trying to open a file that needs a newer version of Yapbam ({0} is the file name).
-MainMenu.Open.Error.DialogContent.needUpdate=<html>Sorry, file <b>{0}</b> could not be read.<br>These data appear to come from a newer Yapbam version than yours.<br><br>We recommend you to <b>update Yapbam</b>.</html>
+MainMenu.Open.Error.DialogContent.needUpdate=<html>Desculpa, o arquivo <b>{0}</b> não pode ser lido.<br> Esses dados parecem ser de uma versão mais nova do Yapbam do que a sua.<br><br>Nos recomendamos vocês fazer uma <b>atualização do Yapbam</b>.</html>
 
 #A new tool in the statement view. When entering the final balance of a statement in the following field, Yapbam computes the gap between current final balance and this target
 #This could be useful to retrieve checking errors
@@ -1230,31 +1230,31 @@ CheckModePanel.target.tooltip=<html>Digite o saldo final deste em sua declaração
 CheckModePanel.gap=(Diferença: {0})
 
 #New generic wordings
-GenericButton.select=Select
-Generic.selectAll=Select all
-Generic.unselectAll=Unselect all
+GenericButton.select=Selecione
+Generic.selectAll=Selecione tudo
+Generic.unselectAll=Diselecione tudo
 
 #A new tool to archive old transactions in a separate file
-Archive.menu.name=Archive
-Archive.menu.tooltip=Archives old statements to an archive file
-Archive.selectionDialog.title=Choose the archive file or create a new one
-Archive.statementSelection.helpMessage=<html>Please select the statements you want to archive.<br><br>Click on cell in the \"{0} \" column to display the statement list.<br>The selected statement and all preceding statements will be archived.</html>
-Archive.statementSelection.ignored.title=Ignored
-Archive.statementSelection.nothingSelected=There is no statement in this account
-Archive.statementSelection.noTransactionSelected=No transaction selected
-Archive.statementSelection.until.title=Until statement
-Archive.accountBalancesNotMatch=The initial balance of <b>"{0}"</b> account ({1}) is not equals to the final balance of this account in the archive ({2}).
-Archive.accountBalancesNotMatchFinalMessage=Do you want to continue anyway?
-Archive.report={0} transactions have been successfully archived.
+Archive.menu.name=Arquivo
+Archive.menu.tooltip=Arquivos de extratos antigos para arquivar em um arquivo
+Archive.selectionDialog.title=Selecione um arquivo ou crie um novo
+Archive.statementSelection.helpMessage=<html>Por favor selecione o extrato que quer arquivar.<br><br>Clique na célula na \"{0} \" coluna para mostrar os extratos em forma de lista.<br>O extrato selecionado e os anteriores serão arquivados.</html>
+Archive.statementSelection.ignored.title=Ignorado
+Archive.statementSelection.nothingSelected=Não existe extrato nessa conta
+Archive.statementSelection.noTransactionSelected=Nenhuma transação foi selecionada
+Archive.statementSelection.until.title=Extrato até
+Archive.accountBalancesNotMatch=O balanço inicial da <b>"{0}"</b> conta ({1}) nao e igual ao balanço final nessa conta do arquivo ({2}).
+Archive.accountBalancesNotMatchFinalMessage=Você deseja continuar mesmo assim?
+Archive.report={0} As transações foram efetuadas com sucesso.
 
 #New setting of the transaction table
-MainFrame.Transactions.Preferences.separateExpenseReceipt=Display receipts and expense in separate column
-MainFrame.Transactions.Preferences.separateExpenseReceipt.tooltip=Select this to display receipts and expenses in separate columns
+MainFrame.Transactions.Preferences.separateExpenseReceipt=Mostra recibos e despesas em colunas separadas
+MainFrame.Transactions.Preferences.separateExpenseReceipt.tooltip=Selecione esta para mostras recibos e despesas em colunas separadas
 
 #New settings of the transaction table in the balance history pane
-BalanceHistory.prefs.highlightAlerts=Highlight alerts
-BalanceHistory.prefs.highlightAlerts.tooltip=Check this box to highlight the lines that trigger balance alerts
-BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>Same background as the "<b>{0}</b>" tab</html>
-BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Check this box to use same background colors as the "<b>{0}</b>" tab</html>
-BalanceHistory.prefs.title=Through this tab you can configure the display of the balance history table
+BalanceHistory.prefs.highlightAlerts=Alerta de Destaque 
+BalanceHistory.prefs.highlightAlerts.tooltip=Selecione essa caixa para destacar as linhas que ativam os balanços de alerta
+BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>O mesmo fundo da tela que as "<b>{0}</b>" abas</html>
+BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Selecione essa caixa para usar o mesma cor de fundo da tela como a da "<b>{0}</b>" aba</html>
+BalanceHistory.prefs.title=Através dessa aba, você pode configurar o que mostrar na historia da tabela de balanços.
 
