--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -4,9 +4,10 @@ known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 	Lors de l'édition d'une sous opération, la sélection d'un libellé prédéfini remet le montant de la sous-opération à 0.
 
-version	0.16.4 (28/02/2014)
+version	0.16.4 (01/03/2014)
 fix
 	Bugs mineurs dans l'onglet "Historique du solde".
+	Dans les préférences, supprimer l'affichage des commentaires dans une colonne séparée de la liste des opérations provoquait un plantage quand cette colonne faisait partie des critères de tri.
 
 version	0.16.3 (26/02/2014)
 fix
