--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -4,9 +4,10 @@ known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 	When editing a subtransaction, selecting a predefined label sets the amount to 0.
 
-version	0.16.4 (02/28/2014)
+version	0.16.4 (03/01/2014)
 fix
 	Some minor bugs in balance history tab.  
+	In preference dialog, removing the separate "comment" column from the transactions list caused an error when this column was a sort key of the list.
 
 version	0.16.3 (02/26/2014)
 fix
